# src/main/java/de/project/cinemaapi/generated/model/CinemaTO.java
@@ -2,34 +2,32 @@ package de.project.cinemaapi.generated.model;
 
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.v3.oas.annotations.media.Schema;
 import java.util.ArrayList;
 import java.util.List;
 import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
-import javax.validation.constraints.*;
 
 /**
  * CinemaTO
  */
 @Validated
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2022-03-10T12:00:26.623Z[GMT]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2022-03-12T16:07:18.064Z[GMT]")
 
 
 public class CinemaTO   {
   @JsonProperty("hallList")
   @Valid
-  private List<Integer> hallList = null;
+  private List<HallTO> hallList = null;
 
-  public CinemaTO hallList(List<Integer> hallList) {
+  public CinemaTO hallList(List<HallTO> hallList) {
     this.hallList = hallList;
     return this;
   }
 
-  public CinemaTO addHallListItem(Integer hallListItem) {
+  public CinemaTO addHallListItem(HallTO hallListItem) {
     if (this.hallList == null) {
-      this.hallList = new ArrayList<Integer>();
+      this.hallList = new ArrayList<HallTO>();
     }
     this.hallList.add(hallListItem);
     return this;
@@ -40,12 +38,12 @@ public class CinemaTO   {
    * @return hallList
    **/
   @Schema(description = "List of all cinema halls")
-  
-    public List<Integer> getHallList() {
+  @Valid
+  public List<HallTO> getHallList() {
     return hallList;
   }
 
-  public void setHallList(List<Integer> hallList) {
+  public void setHallList(List<HallTO> hallList) {
     this.hallList = hallList;
   }
 
@@ -71,7 +69,7 @@ public class CinemaTO   {
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class CinemaTO {\n");
-    
+
     sb.append("    hallList: ").append(toIndentedString(hallList)).append("\n");
     sb.append("}");
     return sb.toString();
